--- a/package.json
+++ b/package.json
@@ -3,9 +3,10 @@
   "version": "0.0.0",
   "dependencies": {},
   "devDependencies": {
+    "autoprefixer": "^6.0.3",
     "grunt": "~0.4.2",
-    "grunt-autoprefixer": "~1.0.1",
     "grunt-contrib-compass": "~0.9.1",
-    "grunt-contrib-watch": "~0.5.3"
+    "grunt-contrib-watch": "~0.5.3",
+    "grunt-postcss": "^0.6.0"
   }
 }
