--- a/package.json
+++ b/package.json
@@ -3,10 +3,10 @@
   "version": "0.0.0",
   "dependencies": {},
   "devDependencies": {
-    "autoprefixer": "^6.0.3",
-    "grunt": "~0.4.2",
-    "grunt-contrib-compass": "~0.9.1",
-    "grunt-contrib-watch": "~0.5.3",
-    "grunt-postcss": "^0.6.0"
+    "autoprefixer": "*",
+    "grunt": "*",
+    "grunt-contrib-compass": "*",
+    "grunt-contrib-watch": "*",
+    "grunt-postcss": "*"
   }
 }
