--- a/package.json
+++ b/package.json
@@ -3,10 +3,11 @@
   "version": "0.0.0",
   "dependencies": {},
   "devDependencies": {
-    "autoprefixer": "*",
-    "grunt": "*",
-    "grunt-contrib-compass": "*",
-    "grunt-contrib-watch": "*",
-    "grunt-postcss": "*"
+    "autoprefixer": "^7.1.5",
+    "grunt": "^1.0.1",
+    "grunt-contrib-compass": "^1.1.1",
+    "grunt-contrib-watch": "^1.0.0",
+    "grunt-postcss": "^0.9.0",
+    "postcss": "^6.0.13"
   }
 }
